refactor: replace String.isBlank() with JDK 8 compatible trim().isEmpty()
Made-with: Cursor